--- a/Aulas/ex012/Analisador.html
+++ b/Aulas/ex012/Analisador.html
@@ -13,7 +13,7 @@
             padding: 0px 30px;
             margin: auto;
         }
-        div#title{
+        header{
             color: white;
             text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.301);
         }
@@ -28,7 +28,7 @@
             font-size: 0.9em;
             background-color: white;
             border-radius: 20px;
-            padding: 30px 0px;
+            padding: 10px 0px;
             margin: auto;
             min-width: 400px;
             max-width: 600px;
@@ -42,7 +42,7 @@
             width: 150px;
             font-size: 0.8em;
         }
-        div#copyright{
+        footer{
             margin: 20px;
             color: white;
             font-size: 0.9em;
@@ -52,23 +52,21 @@
     </style>
 </head>
 <body>
-    <div id="title">
+    <header>
         <h1>Analisador de Números</h1>
-    </div>
+    </header>
     <main>
         <div>Número (entre 1 e 100): <input type="number" name="num" id="val"> <input type="button" value="Adicionar" onclick="adicionar()">
         </div>
         <div>
-            <select name="numeros" id="seltab" size="5">
-                
-            </select>
+            <select name="numeros" id="seltab" size="5"></select>
         </div>
         <div><input type="button" value="Finalizar" onclick="finalizar()"></div>
         <div id="res"></div>
     </main>
-    <div id="copyright">
+    <footer>
         @ Diamondarms
-    </div>
+    </footer>
 
     <script src="scriptAnalisador.js"></script>
 </body>
